force-app/main/default/objects/Laptop_Bookings__c/fields/core_type__c.field-meta.xml
<CustomField>
    <fullName>core_type__c</fullName>
    <label>core type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Laptop_names__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>core i3</fullName>
            </value>
            <value>
                <fullName>core i5</fullName>
            </value>
            <value>
                <fullName>core i7</fullName>
            </value>
            <value>
                <fullName>Bionic chip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>