force-app/main/default/objects/Laptop_Bookings__c/fields/Laptops_Available__c.field-meta.xml
<CustomField>
    <fullName>Laptops_Available__c</fullName>
    <formula>50 - 
Total_No_Of_Laptops__r.Laptops_delivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laptops Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>